Nuclear CORS fix: allow all headers and exposed headers